# backend/src/entity/reminders.go
@@ -22,3 +22,16 @@ type Befores struct {
 	RemindId uint
 	Remind   Remind `gorm:"foreignKey:RemindId"`
 }
+
+func (u Remind) MapToRemiderDto(befores []Befores) (ans ReminderDto) {
+	ans.Id = u.Id
+	ans.Msg = u.Msg
+	layout := "2006-01-02"
+	ans.When = u.Date.Format(layout)
+	bf := make([]uint, len(befores))
+	for i, v := range befores {
+		bf[i] = v.Time
+	}
+	ans.Before = bf
+	return
+}
